[package]
name = "troudever"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
futures-util = "0.3"
url = "2.5"
chrono = "0.4" 
crossbeam-channel = "0.5"
eframe = "0.33.2"
serde_json ={ version = "1.0"}